Fix to mobile layout for flicker guide

--- a/wiki-v4/wiki-v3.css
+++ b/wiki-v4/wiki-v3.css
@@ -210,8 +210,8 @@
 
     .wiki-img-block{
         display: inline; 
-        padding:20px; 
-        width: 140px;
+        padding: 10px; 
+        width: calc(25% - 20px);
         height: 230px;
         text-align: center;
     }
